end of day comit

--- a/admin.html
+++ b/admin.html
@@ -12,18 +12,17 @@
             SVENSKA FILMFÖRENINGAR
         </div>
         <div class="login">
-           Filmstudio <input type="text" id="userName"> 
-           Lösenord <input type="password" id="userPass">
+           Admin <input type="text" id="adminName"> 
+           Lösenord <input type="password" id="adminPass">
            <button id="login">Logga in</button>
         </div>
     </div>
 </header>
 <body>
-    <div class="mainBody flex-container">
-        <div class="movieBody" id="movieList"></div>
-        <div class="movieBody" id="triviaList"></div>
+    <div class="mainBody" id="movieList">
+        
     </div>
-    <script src="script.js"></script>
+    <script src="scriptAdmin.js"></script>
 </body>
 <footer>
     Svenska Filmföreningar,
