--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
         <div">
             SVENSKA FILMFÖRENINGAR
         </div>
-        <div class="login">
-           Filmstudio <input type="text" id="userName"> 
-           Lösenord <input type="password" id="userPass">
-           <button id="login">Logga in</button>
-        </div>
+        <div class="login" id="user"></div>
+        <div class="login" id="usererror"></div>
     </div>
 </header>
 <body>
@@ -26,6 +23,9 @@
     <script src="script.js"></script>
 </body>
 <footer>
+    <div>
+        Sugen på att skapa en egen filmstudio? Ansök  <button class="button" onclick='newFilmclubForm()'>Här</button>
+    </div>
     Svenska Filmföreningar,
     Box 12345,
     tel: 070-123456789,
