end of day commits

--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
 </header>
 <body>
     <div class="mainBody flex-container">
-        <div class="movieBody" id="movieList"></div>
-        <div class="movieBody" id="triviaList"></div>
+        <div class="movieBody" id="leftSidePage"></div>
+        <div class="movieBody" id="rightSidePage"></div>
     </div>
-    <script src="script.js"></script>
 </body>
 <footer>
-    <div>
-        Sugen på att skapa en egen filmstudio? Ansök  <button class="button" onclick='newFilmclubForm()'>Här</button>
+    <div id="footerPart">
     </div>
     Svenska Filmföreningar,
     Box 12345,
     tel: 070-123456789,
     email: kansli@sff.se
+    <script src="script.js"></script>
 </footer>
 </html>
