--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,28 +6,30 @@
     <title>SFF Admin</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header>
-    <div>
-        <div">
-            SVENSKA FILMFÖRENINGAR
-        </div>
-        <div class="login" id="user"></div>
-        <div class="login" id="usererror"></div>
-    </div>
-</header>
 <body>
+    <header>
+        <div>
+            <div">
+                SVENSKA FILMFÖRENINGAR
+            </div>
+            <div class="login" id="user"></div>
+            <div class="login" id="usererror"></div>
+        </div>
+    </header>
+
     <div class="mainBody flex-container">
         <div class="movieBody" id="leftSidePage"></div>
         <div class="movieBody" id="rightSidePage"></div>
     </div>
+
+    <footer>
+        <div id="footerPart">
+        </div>
+        Svenska Filmföreningar,
+        Box 12345,
+        tel: 070-123456789,
+        email: kansli@sff.se
+        <script src="scriptAdmin.js"></script>
+    </footer>
 </body>
-<footer>
-    <div id="footerPart">
-    </div>
-    Svenska Filmföreningar,
-    Box 12345,
-    tel: 070-123456789,
-    email: kansli@sff.se
-    <script src="scriptAdmin.js"></script>
-</footer>
 </html>
