--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <title>SFF</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header>
-    <div>
-        <div">
-            SVENSKA FILMFÖRENINGAR
-        </div>
-        <div class="login" id="user"></div>
-        <div class="login" id="usererror"></div>
-    </div>
-</header>
 <body>
+    <header>
+        <div>
+            <div"> SVENSKA FILMFÖRENINGAR </div>
+            <div class="login" id="user"></div>
+            <div class="login" id="usererror"></div>
+        </div>
+    </header>
+
     <div class="mainBody flex-container">
         <div class="movieBody" id="leftSidePage"></div>
         <div class="movieBody" id="rightSidePage"></div>
     </div>
-</body>
-<footer>
-    <div id="footerPart">
-    </div>
-    Svenska Filmföreningar,
-    Box 12345,
-    tel: 070-123456789,
-    email: kansli@sff.se
+
+    <footer>
+        <div id="footerPart">
+        </div>
+        Svenska Filmföreningar,
+        Box 12345,
+        tel: 070-123456789,
+        email: kansli@sff.se
+    </footer>
     <script src="script.js"></script>
-</footer>
+</body>
 </html>
