changed some name and did some small fix

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </div>
 
     <footer>
-        <div id="footerPart">
-        </div>
+        <div id="footerPart"></div>
         Svenska Filmföreningar,
         Box 12345,
         tel: 070-123456789,
